check_errors.txt
    Checking windows v0.58.0
    Checking hdr-screenshot v0.1.0 (D:\Dev\screenshot)
warning: unused import: `std::path::Path`
 --> src\save.rs:2:5
  |
2 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
    --> src\save.rs:14:71
     |
  14 |         let encoder = factory.CreateEncoder(&GUID_ContainerFormatWmp, None)?;
     |                               -------------                           ^^^^ expected `*const GUID`, found `Option<_>`
     |                               |
     |                               arguments to this method are incorrect
     |
     = note: expected raw pointer `*const core::guid::GUID`
                       found enum `Option<_>`
note: method defined here
    --> C:\Users\Jiyao\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.58.0\src\Windows\Win32\Graphics\Imaging\mod.rs:1287:19
     |
1287 |     pub unsafe fn CreateEncoder(&self, guidcontainerformat: *const windows_core::GUID, pguidvendor: *const windows_core::GUID) -> ...
     |                   ^^^^^^^^^^^^^

error[E0599]: no method named `CreateNewFrame` found for struct `IWICBitmapEncoder` in the current scope
  --> src\save.rs:24:17
   |
24 |         encoder.CreateNewFrame(&mut frame, &mut props)?;
   |                 ^^^^^^^^^^^^^^ method not found in `IWICBitmapEncoder`

error[E0282]: type annotations needed
  --> src\save.rs:25:13
   |
25 |         let frame = frame.unwrap();
   |             ^^^^^
26 |
27 |         frame.Initialize(props.as_ref())?;
   |         ----- type must be known at this point
   |
help: consider giving `frame` an explicit type
   |
25 |         let frame: /* Type */ = frame.unwrap();
   |                  ++++++++++++

Some errors have detailed explanations: E0282, E0308, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `hdr-screenshot` (bin "hdr-screenshot") generated 1 warning
error: could not compile `hdr-screenshot` (bin "hdr-screenshot") due to 3 previous errors; 1 warning emitted
